@@ -17,7 +17,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <slf4j.version>1.7.21</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
-        <json.org.version>20160212</json.org.version>
+        <json.org.version>20160810</json.org.version>
+        <commons-compress.version>1.12</commons-compress.version>
 
         <org-netbeans-modules-editor-indent.CodeStyle.project.indent-shift-width>4</org-netbeans-modules-editor-indent.CodeStyle.project.indent-shift-width>
         <org-netbeans-modules-editor-indent.CodeStyle.project.spaces-per-tab>4</org-netbeans-modules-editor-indent.CodeStyle.project.spaces-per-tab>
@@ -68,17 +69,17 @@
         <system>GitHub</system>
         <url>https://github.com/graphhopper/graphhopper/issues</url>
     </issueManagement>
-    <modules>
-        <module>tools-lgpl</module>
-        <module>core</module>
-        <module>reader-osm</module>
-        <module>reader-overlay-data</module>
-        <module>tools</module>
-        <module>web</module>
-    </modules>
+
     <prerequisites>
         <maven>3.2</maven>
     </prerequisites>
+    <modules>
+        <module>core</module>
+        <module>reader-osm</module>
+        <module>reader-json</module>
+        <module>tools</module>
+        <module>web</module>
+    </modules>
     <build>
         <plugins>
             <plugin>
@@ -91,7 +92,7 @@
                     <compilerArgument>-Xlint:deprecation</compilerArgument>
                     -->
 
-                    <!-- suppress warning about Unsafe functionality -->
+                    <!-- suppress warning about Unsafe functionality -->                    
                     <compilerArgument>-XDignore.symbol.file</compilerArgument>
                     <fork>true</fork>
                     <source>1.7</source>
@@ -126,7 +127,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.6</version>
+                <version>3.0.0</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -148,21 +149,6 @@
             </plugin>
             -->
 
-            <!-- create html output for findbugs -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>3.5.1</version>
-                <configuration>
-                    <reportPlugins>
-                        <plugin>
-                            <groupId>org.codehaus.mojo</groupId>
-                            <artifactId>findbugs-maven-plugin</artifactId>
-                        </plugin>
-                    </reportPlugins>
-                </configuration>
-            </plugin>
-
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
@@ -171,7 +157,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>3.6</version>
+                <version>3.7</version>
                 <!-- e.g. under core/target/site/pmd.html
                 <configuration>
                     <format>html</format>
@@ -204,6 +190,12 @@
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
+            <!-- this exception is valid for jdk8 profile below too -->
+            <modules>                
+                <!-- See https://github.com/graphhopper/graphhopper/pull/874#issuecomment-261231518
+                Currently works for jdk8 only -->
+                <module>reader-shp</module>
+            </modules>
             <build>
                 <plugins>
                     <plugin>
@@ -270,6 +262,62 @@
             <modules>
                 <module>android/app</module>
             </modules>
+        </profile>
+        
+        <profile>
+            <id>jdk8</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties />
+            <modules>                
+                <!-- See https://github.com/graphhopper/graphhopper/pull/874#issuecomment-261231518
+                Currently works for jdk8 only -->
+                <module>reader-shp</module>
+            </modules>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        
+        <profile>
+            <id>jdk9</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>                                
+                <jdk>9-ea</jdk>
+            </activation>
+            <properties />           
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <configuration>
+                            <systemPropertyVariables />
+                            <argLine>--add-exports java.base/jdk.internal.ref=ALL-UNNAMED</argLine>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.19.1</version>
+                        <configuration>
+                            <!-- Without the add-exports/addExports options we get
+                                 java.lang.reflect.InaccessibleObjectException: Unable to make member of class 
+                                 jdk.internal.ref.Cleaner accessible: module java.base does not export jdk.internal.ref to unnamed module @bd8be5
+                                 See #852                                 
+                            -->                            
+                            <argLine>-Xmx100m -Xms100m --add-exports java.base/jdk.internal.ref=ALL-UNNAMED</argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 
